<resources>
    <string name="tchala_url" translatable="false">https://lisa.ht/tchala/</string>
    <string name="faq_url" translatable="false">https://lisa.ht/faq/</string>
    <string name="tсhala" translatable="false">Tсhala</string>
    <string name="lotto5jr_offline" translatable="false">*720*1#</string>
    <string name="lotto5_5g_caps" translatable="false">LOTTO5P5</string>
    <string name="lotto5_offline" translatable="false">*885*1#</string>
    <string name="lotto5_caps" translatable="false">LOTTO5</string>
    <string name="lotto4_offline" translatable="false">*884*1#</string>
    <string name="lotto4_caps" translatable="false">LOTTO4</string>
    <string name="lotto3_offline" translatable="false">*883*1#</string>
    <string name="lotto3_caps" translatable="false">LOTTO3</string>
    <string name="maryaj_offline" translatable="false">*882*2#</string>
    <string name="maryaj_caps" translatable="false">MARYAJ</string>
    <string name="bolet_caps" translatable="false">BOLET</string>
    <string name="bolet_offline" translatable="false">*882*1#</string>
    <string name="boloto_caps" translatable="false">BOLOTO</string>
    <string name="boloto_offline" translatable="false">*881*1#</string>
    <string name="_g" translatable="false">G</string>
    <string name="lotto5jr" translatable="false">lotto5P5</string>
    <string name="xx" translatable="false">XX</string>
    <string name="g_" translatable="false">g</string>
    <string name="G" translatable="false">%s%s G</string>
    <string name="lorem_ipsum_" translatable="false">Lorem ipsum</string>
    <string name="dolor_sit_amet" translatable="false">Dolor sit amet</string>
    <string name="consectetur_adipiscing" translatable="false">Consectetur adipiscing</string>
    <string name="non_quis_vivera" translatable="false">Non quis vivera</string>
    <string name="lotto4" translatable="false">lotto4</string>
    <string name="boloto" translatable="false">boloto</string>
    <string name="lotto5_5g" translatable="false">lotto5P5</string>
    <string name="lotto5" translatable="false">lotto5</string>
    <string name="lotto5_royal" translatable="false">royal5</string>
    <string name="borlet" translatable="false">bolet</string>
    <string name="maryage" translatable="false">maryaj</string>
    <string name="mariage" translatable="false">mariage</string>
    <string name="lotto3" translatable="false">lotto3</string>
    <string name="app_name" translatable="false">Lisa Lotto</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="continue_in_french" translatable="false">Continue in French</string>
    <string name="continue_in_kreyol" translatable="false">Continue in Kreyol</string>
    <string name="lorem_ipsum" translatable="false">noon_draw</string>
    <string name="_509plus" translatable="false">+509</string>
    <string name="_dash" translatable="false">-</string>
    <string name="french" translatable="false">Français</string>
    <string name="kreyol" translatable="false">Kreyòl</string>
    <string name="english" translatable="false">English</string>
    <string name="lorem_ipsum_dolor" translatable="false">Lorem ipsum dolor</string>
    <string name="sit_amet_consectetur_adipiscing_elit" translatable="false">Sit amet, consectetur adipiscing elit.</string>
    <string name="zero" translatable="false">00</string>
    <string name="eMoney" translatable="false">eMoney</string>
    <string name="april_16_2020" translatable="false">April 16, 2020</string>
    <string name="colon" translatable="false">:</string>
    <string name="_5_000_00_htg" translatable="false">5,000.00</string>
    <string name="_200_000_00_htg" translatable="false">200,000.00 G</string>
    <string name="_50x_20x_10x" translatable="false">50X 20X 10X</string>
    <string name="_1_000x" translatable="false">1,000X</string>
    <string name="_500x" translatable="false">500X</string>
    <string name="_5_000x" translatable="false">5,000X</string>
    <string name="_25_000x" translatable="false">25,000X</string>
    <string name="progressive_jackpot" translatable="false">Progressive jackpot</string>
    <string name="_509" translatable="false">509</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="_509_3888_1000" translatable="false">+509 3888 1000</string>
    <string name="whatsapp" translatable="false">Whatsapp</string>
    <string name="httpMMe" translatable="false">http://m.me/</string>
    <string name="lisalottoht" translatable="false">\@lisalottoht</string>
    <string name="facebook_messenger" translatable="false">Facebook Messenger</string>
    <string name="customercare_lisa_ht" translatable="false">Customercare@lisa.ht</string>
    <string name="lisa_ht" translatable="false">Lisa.ht</string>
    <string name="_888" translatable="false">888</string>
    <string name="centimes" translatable="false">00</string>
    <string name="_G_" translatable="false">"%s G</string>
    <string name="_htg_" translatable="false">"%s G</string>
    <string name="_HTG" translatable="false">G</string>
    <string name="_0_htg" translatable="false">0 G</string>
    <string name="_14_32_21_12_2020" translatable="false">14:32 / 21.12.2020</string>
    <string name="_100_htg" translatable="false">1 000 G</string>
    <string name="devon_jones" translatable="false">Devon Jones</string>
    <string name="_509_" translatable="false">+509-%s</string>
    <string name="tel_50938881005" translatable="false">50938881005</string>
    <string name="htg" translatable="false">G</string>
    <string name="_100" translatable="false">100</string>
    <string name="sogexpress" translatable="false">Sogexpress</string>
    <string name="mon_cash" translatable="false">Mon cash</string>
    <string name="mon_cash_lisa" translatable="false">Mon cash - Lisa</string>
    <string name="lisa_mon_cash" translatable="false">Lisa - Mon cash</string>
    <string name="qest_mark" translatable="false">\??</string>
    <string name="qp" translatable="false">QP</string>
    <string name="_6" translatable="false">6</string>
    <string name="qest_mark_three" translatable="false">\???</string>
    <string name="cmb" translatable="false">Cmb</string>
    <string name="HTG_d" translatable="false">%d G</string>
    <string name="_4" translatable="false">4</string>
    <string name="xxx" translatable="false">XXX</string>
    <string name="q" translatable="false">Q</string>
    <string name="p" translatable="false">P</string>
    <string name="dolor_sit_amet_" translatable="false">Dolor sit amet, consectetur adipiscing elit. Nisi, turpis leo ac non et.</string>
    <string name="locale">ht</string>
    <string name="gender">Sèks</string>
    <string name="birthday">Dat ou fèt</string>
    <string name="female">Fanm</string>
    <string name="male">Gason</string>
    <string name="location">Adrès</string>
    <string name="email">Imèl</string>
    <string name="social_media">Rezo sosyal</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="choose_avatar">Chwazi yon imaj!</string>
    <string name="save_changes">Anrejistre</string>
    <string name="name">Non</string>
    <string name="no_internet_connection">Erè koneksyon rezo</string>
    <string name="try_again">Eseye anko</string>
    <string name="get_started">Antre</string>
    <string name="turn_on_notifications">Aktive son an</string>
    <string name="no_thanks">Non, manfòm</string>
    <string name="registration">Enskripsyon</string>
    <string name="enter_your_mobile_number_we_will_send_n_you_otp_to_verify_later">Antre nimewo telefòn ou, nou pral voye ba ou yon kòd tanporè sou nimewo sa a</string>
    <string name="phone_number_is_invalid">Nimewo telefon pa valid</string>
    <string name="verification">Verifikasyon</string>
    <string name="enter_confirmation_code_hold_tight_n_this_might_take_a_minute">Antre Kòd ou resevwa sou SMS</string>
    <string name="re_send_code_in">Voye kòd la ankò nan\u0020</string>
    <string name="code_is_invalid">Kòd pa valid</string>
    <string name="re_send_code">Voye kòd la ankò</string>
    <string name="i_am_agree_with_the_tearms_of_service">Mwen li epi mwen dakò ak Tèm itilizasyon yo</string>
    <string name="i_am_agree_with_the_privacy_policy">Mwen li epi mwen dakò ak Règleman sou enfòmasyon prive</string>
    <string name="i_am_agree_with_the_tearms_of_payment">Mwen dakò avèk Tèm pèman</string>
    <string name="i_agree_with_the_terms_of_service">Mwen dakò avèk Kondisyon Sèvis la</string>
    <string name="transaction_confirmation">Transfè a konfime avèk siksè!</string>
    <string name="terms_of_service">Tèm itilizasyon yo</string>
    <string name="terms_agreement">Tèm itilizasyon</string>
    <string name="terms_of_payment">Tèm pèman</string>
    <string name="privacy_policy">Règleman sou enfòmasyon prive</string>
    <string name="create_a_pin_code">Kreye PIN LISA ou</string>
    <string name="remember_me">Sonje\'m</string>
    <string name="create_your_secured_pin_code_to_hold_n_your_account_safe">Kreye yon kod PIN sekirite pou pwoteje kont ou</string>
    <string name="create_a_security_word">Kreye mo sekrè ou</string>
    <string name="create_security_word">Antre mo ki gen yon siyifikasyon espeyal pou ou. Mo sa va pèmèt ou risèt PIN LISA ou.</string>
    <string name="enter_security_word_max_28_char">Antre mo sekirite Maksimòm 28 lèt</string>
    <string name="done">Fini</string>
    <string name="it_s_too_short">Two kout</string>
    <string name="invalid_pincode_you_have">Kòd PIN pa valid - Ou gen\u0020 </string>
    <string name="enter_current_pin">Kòd PIN LISA</string>
    <string name="existing_pin">PIN LISA valid</string>
    <string name="skip">Sote</string>
    <string name="next_draw">Pwochen Tiraj :</string>
    <string name="choose_a_game_to_play">Chwazi jwet wap jwe</string>
    <string name="hours">Èdtan</string>
    <string name="minutes">Minit</string>
    <string name="seconds">Segonn</string>
    <string name="view_my_profile">Pwofil mwen</string>
    <string name="my_tickets">Biyè\'m</string>
    <string name="wallet_cash_out">Balans &amp; Touche lajan\'w</string>
    <string name="settings">Paramèt</string>
    <string name="winning_numbers">Rezilta Tiraj</string>
    <string name="games_subscriptions">Abonman Otomatik:</string>
    <string name="games_subscriptions_">Abonman Otomatik</string>
    <string name="reference_program">Pwogram referans</string>
    <string name="promotions">Pwomosyon</string>
    <string name="message_center">Sant mesaj</string>
    <string name="contact_us">Kontakte nou</string>
    <string name="combo6">Konbo6</string>
    <string name="combo">Konbo : %s</string>
    <string name="current_selection_press_play_to_confirm">Seleksyon ou - Peze JWE pou konfime</string>
    <string name="total_price">Total fich</string>
    <string name="game_rules">Règ jwèt la</string>
    <string name="filter_by">Chwazi :</string>
    <string name="win">Gayan</string>
    <string name="closed">Pèdan</string>
    <string name="pending">An atant</string>
    <string name="not_accepted">Pa aksepte</string>
    <string name="no_subscription_registered">Ou poko gen biyè otomatik anrejistre</string>
    <string name="select_game">Chwazi yon jwèt</string>
    <string name="thanks">Mèsi</string>
    <string name="apply_filters">Aplike filtè</string>
    <string name="here_is_a_list_of_your_subscriptions">Lis biyè otomatik ou</string>
    <string name="the_existing_lisa_pin_is_a">PIN LISA valid ou se kòd 4 chif ou te gentan kreye sou selilè ou.</string>
    <string name="profile">Pwofil</string>
    <string name="wallet_">Bous</string>
    <string name="tickets_">Biyè</string>
    <string name="last_draws">Rezilta Tiraj</string>
</resources>