<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="12dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_medium_smaller"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/dialog_info_close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/margin_medium_smaller_16dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_close"
            android:tint="@color/grey" />

        <TextView
            android:id="@+id/dialog_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:drawablePadding="@dimen/padding_small_8dp"
            android:fontFamily="@font/montserrat_extra_bold"
            android:text="@string/existing_pin"
            android:textColor="@color/darkGrey"
            android:textSize="@dimen/text_size_big"
            app:drawableStartCompat="@drawable/ic_info" />

        <TextView
            android:id="@+id/dialog_info_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="23dp"
            android:drawablePadding="@dimen/padding_small_8dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:paddingHorizontal="@dimen/padding_medium_small_21dp"
            android:text="@string/the_existing_lisa_pin_is_a"
            android:textColor="@color/darkGrey"
            android:textSize="@dimen/text_size_medium_small" />

        <androidx.cardview.widget.CardView
            android:id="@+id/dialog_info_ok_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium_small_21dp"
            android:layout_marginVertical="32dp"
            app:cardCornerRadius="22dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:paddingVertical="13dp"
                android:text="@string/thanks"
                android:textSize="@dimen/text_size_medium" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.cardview.widget.CardView>